@@ -29,6 +29,8 @@ JHtml::_('behavior.formvalidation');
 		<div class="fltrt">
 			<button type="button" onclick="Joomla.submitform('component.save', this.form);">
 				<?php echo JText::_('JSAVE');?></button>
+			<button type="button" onclick="Joomla.submitform('component.apply', this.form);">
+				<?php echo JText::_('JAPPLY');?></button>
 			<button type="button" onclick="window.parent.SqueezeBox.close();">
 				<?php echo JText::_('JCANCEL');?></button>
 		</div>
