@@ -39,6 +39,7 @@ JADMINISTRATION="Administration"
 JADMINISTRATOR="Administrator"
 JALL="All"
 JALL_LANGUAGE="All"
+JAPPLY="Save"
 JARCHIVED="Archived"
 JAUTHOR="Author"
 JCANCEL="Cancel"
@@ -75,7 +76,7 @@ JPUBLISHED="Published"
 JRECORD_NUMBER="Record Number"
 JREGISTER="Register"
 
-JSAVE="Save"
+JSAVE="Save &amp; Close"
 JSELECT="Select"
 JSHOW="Show"
 JSITE="Site"
